correction titre lightbox, modal video, overflow après contact, acces like par clavier

--- a/css/photographer.css
+++ b/css/photographer.css
@@ -59,8 +59,8 @@ ul {
 }
 
 .photograph-header img {
-    height: 200px;
-    width: 200px;
+    height: 100%;
+    width: 100%;
     border-radius: 50%;
     object-fit: cover;
 }
