--- a/css/style.css
+++ b/css/style.css
@@ -71,9 +71,14 @@ h1 {
     text-align: center;
 }
 
-.photographer_section article img {
+.image-fit{
     height: 200px;
     width: 200px;
+}
+
+.photographer_section article img {
+    height: 100%;
+    width: 100%;
     border-radius: 50%;
     object-fit: cover;
 }
